<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/icon_about"
            android:title="@string/about" />


        <item
            android:id="@+id/menu_telegram_group"
            android:icon="@drawable/icon_chat"
            android:title="@string/telegram_group" />

        <item
            android:id="@+id/menu_telegram_channel"
            android:icon="@drawable/icon_channel"
            android:title="@string/telegram_channel" />

        <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/icon_rate"
            android:title="@string/rate" />

        <item
            android:id="@+id/menu_apps"
            android:icon="@drawable/icon_apps"
            android:title="@string/apps" />

        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/icon_share"
            android:title="@string/share" />

        <item
            android:id="@+id/menu_developer"
            android:icon="@drawable/icon_developer"
            android:title="@string/developer" />

        <item
            android:id="@+id/menu_donate"
            android:icon="@drawable/icon_donate"
            android:title="@string/donate" />


    </group>

</menu>