<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:theme="@style/Theme.Adib"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/version"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/date"
        android:textSize="12sp" />


    <androidx.cardview.widget.CardView
        style="@style/cv_btn"
        android:elevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/info" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/TextAppearance.AppCompat.Caption"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/copy_right"/>




</androidx.appcompat.widget.LinearLayoutCompat>