<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/Theme.Adib">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/developers" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/my_name"
        android:textSize="22sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_resume"
            style="@style/cv_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/resume" />


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/red"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/order"
                android:textColor="@color/white" />


        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/connect" />


    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/icons"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_instagram"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/icon_instagram" />

                <ImageView
                    android:id="@+id/img_telegram"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/icon_telegram" />

                <ImageView
                    android:id="@+id/img_vigool"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/virgool" />

                <ImageView
                    android:id="@+id/img_github"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/icon_github" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/icons"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/instagram" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/telegram" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/virgool" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/github" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>