<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.MainActivity"
    tools:openDrawer="right">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_main"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:fitsSystemWindows="true"
        android:layoutDirection="rtl"
        app:headerLayout="@layout/menu_header"
        app:itemTextAppearance="@style/NV"
        app:menu="@menu/main_menu">

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/copy_right" />

    </com.google.android.material.navigation.NavigationView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_toolbar" />

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_toolbar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:src="@drawable/icon_menu"
            app:tint="@color/white" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_persianStory"
                style="@style/cv_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_ps"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/persian_story" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_translateStory"
                style="@style/cv_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_ts"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/translate_story" />


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_persianPoem"
                style="@style/cv_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_pp"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/persian_poem" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_drama"
                style="@style/cv_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_d"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/drama" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.adivery.sdk.AdiveryBannerAdView
            android:id="@+id/banner_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:banner_size="smart_banner"
            app:placement_id="187280ee-4e92-40e9-9d5a-e9c9206ff4a9" />


    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>